--- a/vite-project/src/components/NavBar/Botones/styles.module.css
+++ b/vite-project/src/components/NavBar/Botones/styles.module.css
@@ -1,7 +1,7 @@
 .boton{
     border: 1px solid rgb(97, 119, 155);
     border-radius: 4px;
-    padding: 8px;
+    height: 50%;
     background-color: rgb(84, 84, 84);
     color: bisque;
     text-decoration: none;
